# ContextMindLM-server

./: Dockerfile  auth.py  database.py  docker-compose.yml  main.py  pyproject.toml  tasks.py
notebooks/: simple_agent.ipynb  superevisor_agent.ipynb
routers/: chats.py  files.py  projects.py  users.py
src/: server.py
src/agents/simple_agent/: agent.py
src/agents/supervisor_agent/: agent.py
src/config/: index.py
src/models/: index.py
src/rag/ingestion/: index.py  utils.py
src/rag/retrieval/: index.py  utils.py
src/routes/: chatRoutes.py  projectFilesRoutes.py  projectRoutes.py  userRoutes.py
src/services/: awsS3.py  celery.py  clerkAuth.py  llm.py  supabase.py  webScrapper.py
src/utils/: index.py
supabase/migrations/: 20260312102151_initial_schema.sql  20260317052117_chunk-search-functions.sql
