[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "clerk-backend-api (>=5.0.2,<6.0.0)",
    "boto3 (>=1.42.67,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "langchain (==1.0.8)",
    "langchain-community (==0.4.1)",
    "langchain-openai (==1.0.3)",
    "unstructured[all-docs] (==0.18.11)",
    "scrapingbee (>=2.0.2,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "langgraph (==1.0.2)",
    "ddgs (>=9.9.1,<10.0.0)",
    "langchain-tavily (>=0.2.13,<0.3.0)",
    "torch",
    "torchvision",
    "structlog (>=25.5.0,<26.0.0)"
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
